--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@directus/extensions-sdk": "11.0.4",
+    "@directus/types": "^11.1.1",
     "typescript": "^5.4.5",
     "vue": "^3.4.27"
   }
